# maui-index

./: CMakeLists.txt  README.md  org.kde.index.appdata.xml
src/: CMakeLists.txt  index.cpp  index.h  index_assets.qrc  main.cpp  main.qml
src/controllers/: dirinfo.cpp  fileproperties.cpp  folderconfig.cpp  patharrowbackground.cpp  patharrowbackground.h
src/models/: pathlist.cpp  recentfilesmodel.cpp  recentfilesmodel.h  storagemodel.cpp  storagemodel.h
src/widgets/previewer/: AudioPreview.qml  CompressedPreview.qml  DocumentPreview.qml  FilePreviewer.qml  PreviewerDialog.qml  PreviewerWindow.qml  TextPreview.qml  VideoPreview.qml
src/widgets/views/: Browser.qml  BrowserLayout.qml  BrowserView.qml  DisksSection.qml  FavoritesSection.qml  FileMenu.qml  HomeView.qml  PathBar.qml  PathBarDelegate.qml  PlacesSection.qml  PlacesSideBar.qml  RecentSection.qml  SettingsDialog.qml  ShortcutsDialog.qml  Terminal.qml  TerminalColorSchemes.qml
src/widgets/views/home/: SectionGroup.qml
